# tech-garden

./: .gitignore  README.md  journal.md
apps/cell-service/: Cargo.toml  Dockerfile
apps/cell-service/src/: main.rs
infra/docker/: docker-compose.yaml
infra/docker/traefik/: dynamic.yaml  traefik.yaml.deleted
